Agregando segundo parrafo

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>Aqui iria el titulo de la página</h1>
     
     <p> Parrafo añadido desde Github </p>
+
+    <p> segundo parrafo desde VSC</p>
 </body>
 </html>
